Fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -212,12 +212,9 @@ progress {
 
 #controls {
     width: 100%;
-    display: grid;
-    grid-template-columns:repeat(7,1fr);
-}
-
-#btnPause {
-    /* display: none; */
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
 
 .buttons {
